# tiny-humans

./: Cargo.toml  README.md  Rocket.toml  database.json
src/: database.rs  frontend.rs  human.rs  main.rs
static/: humans.js
templates/: index.html.tera
