[package]
name = "tinyhumans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
