[package]
name = "tinyhumans"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.13"
serde_json = { version = "1.0.26", optional = true }
rmp-serde = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.26.0", features = ["bundled"] }
devise = "0.3.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[features]
json = ["serde_json"]
